--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <div class="preloader">
+        <div class="spinner"></div>
+    </div>
     <div class="main" id="fullPage">
         <div class="section page1" id="home">
             <nav class="nav-bar">
